2009-04-22  Frank Warmerdam  <warmerdam@pobox.com>

	* Remove all the $Log logs.

2009-04-03  Frank Warmerdam  <warmerdam@pobox.com>

	* geotiff_proj4.c: fix case for setting LCC 2SP GeoTIFF from proj.4.

2009-02-23  Frank Warmerdam  <warmerdam@pobox.com>

	* *.c, *.h: Include appropriate copyright messages where missing (#8).

	* geotiff_proj4.c: Fix some buffer overflow holes (#9).

2009-02-18  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_simpletags.c: compute "count" for ascii tag values.

2008-12-29  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalize.c: Optimizations to avoid opening CSV files for
	"well known" definitions. (#4).

	* geotiff_proj4.c: Reduce change of szUnits overflow (#3).

2008-11-27  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalize.c: Introduce support for StdParallel1 in 
	Equirectangular (http://trac.osgeo.org/gdal/ticket/2706)

2008-11-12  Frank Warmerdam  <warmerdam@pobox.com>

	* bin/applygeo.c: New utility for applying georeferencing to an 
	existing file (written by jeskynar@hotmail.com and myself).

2008-10-24  Frank Warmerdam  <warmerdam@pobox.com>

	* bin/listgeo.c: Improve tfw error reporting and user hints (#2)

2008-07-21  Frank Warmerdam  <warmerdam@pobox.com>

	* Prepare 1.2.5 release.

	* csv/*.csv: upgraded to EPSG 6.17.

2008-07-03  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalize.c: Fix potential buffer overflow in GTIFAngleStringToDD
	http://trac.osgeo.org/gdal/ticket/2228
	
2008-05-21  Frank Warmerdam  <warmerdam@pobox.com>

	* bin/geotifcp.c: Support for -4 option to set from proj.4 def.

	* geotiff_proj4.c: Preliminary proj4->geotiff function, quite incomplete

2008-05-09  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_simpletags.{c,h}, geo_new.c, geotiff.h: Introduce "simple tags"
	API for parsing geotiff tags that don't come via libtiff.  Mostly for
	use of liblas. 

2008-01-31  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalize.c: Ignore GCS values less than 1 as seen in the ENVI