@@ -1,5 +1,8 @@
 2009-04-22  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* geo_normalizec: Do not call CSVDeaccess() by default in getdefn - 
+	leave it to the application.  
+
 	* Remove all the $Log logs.
 
 2009-04-03  Frank Warmerdam  <warmerdam@pobox.com>
